# dstool

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: main.yml
docs/: index.md  safetensors.md
dstool/: VERSION  __main__.py  base.py  cli.py
dstool/coreml/encoders/: image_encoder.py  text_encoder.py
dstool/dataloaders/: background_loader.py
dstool/decorators/: __init__.py  class_utils.py  debugger.py  measure.py
dstool/llms/: render_chat.py
dstool/misc/: render_chat.py
dstool/ml_utils/: conversation.py  distances.py  embedding.py  similarity.py
dstool/parallel/: __init__.py  parallel_func.py
dstool/plot/: __init__.py  parser.py  style.py
dstool/tensors/: __init__.py  lossless.py  safetensors.py
dstool/tools/: task2vec.py  task_similarity.py
examples/: test.py
meta/: requirements.txt
tests/: test_base.py
